# sillytavernapk

./: .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  Dockerfile  README.md  Start.bat  UpdateAndStart.bat  UpdateForkAndStart.bat  index.d.ts  package-lock.json  package.json  plugins.js  post-install.js  start.sh  webpack.config.js
.gemini/: config.yaml
.github/: readme-de_de.md  readme-ja_jp.md  readme-ko_kr.md  readme-ru_ru.md  readme-zh_cn.md  readme-zh_tw.md  readme.md
.github/workflows/: android-apk-build.yml  issues-auto-manager.yml  issues-updates-on-merge.yml  job-close-stale.yml  npm-publish.yml  on-close-handler.yml  on-open-handler.yml  pr-auto-manager.yml  pr-check-merge-conflicts.yaml
android/: README-zh.md  build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: launcher.mjs
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/sillytavern/apk/: MainActivity.java  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
default/: config.yaml
docker/: docker-entrypoint.sh
public/: global.d.ts  index.html  lib.js  manifest.json  script.js  style.css
src/: command-line.js  constants.js  express-common.js  prompt-converters.js  request-proxy.js  server-main.js  server-startup.js  users.js  util.js
tests/: package-lock.json  playwright.config.js  util.test.js
tools/: prepare-android-assets.ps1
(+183 files in other folders)
